# legv8

./: Cargo.toml  README.md
lib/: asm.rs  decode.rs  disasm.rs  encode.rs  lib.rs
src/: legv8assemble.rs  legv8disassemble.rs  legv8emulator.rs
