[package]
name = "legv8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "legv8"
path = "lib/lib.rs"

[[bin]]
name = "legv8asm"
path = "src/legv8asm.rs"

[[bin]]
name = "legv8emulator"
path = "src/legv8emulator.rs"

[[bin]]
name = "legv8emulator"
path = "src/legv8emulator.rs"
