# Cargo.toml
# By: John Jekel
# Copyright (C) 2023 John Jekel
# See the LICENSE file at the root of the project for licensing info.
#
# LEGv8 Cargo manifest
#
[package]
name = "legv8"
version = "0.1.0"
edition = "2021"

[dependencies]

[lib]
name = "legv8"
path = "lib/lib.rs"

[[bin]]
name = "legv8assemble"
path = "src/legv8assemble.rs"

[[bin]]
name = "legv8emulator"
path = "src/legv8emulator.rs"

[[bin]]
name = "legv8disassemble"
path = "src/legv8disassemble.rs"

[features]
default = []
nightly-features = ["nightly-features-benches"]
nightly-features-benches = []

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
strip = true
overflow-checks = false
panic = "abort"
lto = true

[profile.release-with-debug]
inherits = "release"
strip = false
overflow-checks = false
panic = "abort"
lto = false
debug = true

